--- a/CommonLit/package.json
+++ b/CommonLit/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-render-html": "^6.3.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "react-native-webview": "^11.15.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
