--- a/CommonLit/package.json
+++ b/CommonLit/package.json
@@ -18,6 +18,7 @@
     "react-native-render-html": "^6.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-webview": "^11.15.0"
   },
   "devDependencies": {
