--- a/CommonLit/package.json
+++ b/CommonLit/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-htmlview": "^0.16.0",
     "react-native-render-html": "^6.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
